@@ -4,11 +4,10 @@
   Build file for the Spring Framework.
 
   This script requires a "lib" directory containing the necessary third party JAR files.
-  See project.properties for the definitions of the properties used in this file.
+  See "project.properties" for the definitions of the properties used in this file.
 
-  Building Spring requires J2SE 1.4+; the releases are built with Sun's JDK 1.5.0.
-	This script will automatically adapt to the Java version that Ant is running on:
-	Spring will only be built with JDK 1.5 support if Ant is running on JDK 1.5.
+  Building Spring requires JDK 1.5+; the releases are built with Sun's JDK 1.5.0.
+	The test suite is able to run on JDK 1.4 and 1.3 as well.
 
   Note: To successfully run the tests on JDK < 1.5.0, you need to use Xerces or any
 	other JAXP parser that properly supports XML includes. A simple way to achieve this
@@ -34,13 +33,6 @@
 				<equals arg1="${ant.java.version}" arg2="1.4"/>
 			</or>
 		</not>
-	</condition>
-
-	<condition property="tiger.unavailable">
-		<or>
-			<equals arg1="${ant.java.version}" arg2="1.3"/>
-			<equals arg1="${ant.java.version}" arg2="1.4"/>
-		</or>
 	</condition>
 
 	<condition property="aspectj.available">
@@ -92,8 +84,9 @@
 	<target name="clean" description="Clean all output dirs (dist, javadocs, classes, test-classes, etc)">
 
 		<delete dir="${target.classes.dir}"/>
-		<delete dir="${target.testclasses.dir}"/>
 		<delete dir="${target.mockclasses.dir}"/>
+		<delete dir="${target.testclasses.dir}"/>
+		<delete dir="${target.tigertestclasses.dir}"/>
 		<delete dir="${target.clover.dir}"/>
 		<delete dir="${target.junit.reports.dir}"/>
 		<delete dir="${target.junit.summary.dir}"/>
@@ -181,8 +174,7 @@
 	<!--
 		Compile the JDK 1.5 source tree.
 	-->
-	<target name="buildtiger" depends="buildmain" if="tiger.available"
-					description="Compile JDK 1.5 source tree java files into class files">
+	<target name="buildtiger" depends="buildmain" description="Compile JDK 1.5 source tree java files into class files">
 
 		<javac destdir="${target.classes.dir}" source="1.5" target="1.5" debug="${debug}"
 					 deprecation="false" optimize="false" failonerror="true">
@@ -209,6 +201,7 @@
 	  	<classpath>
 	  		<path refid="all-libs"/>
   			<path location="${target.classes.dir}"/>
+				<path location="${target.classes.dir}"/>
 	  	</classpath>
 	  </iajc>
 
@@ -222,9 +215,9 @@
 
 
 	<!--
-		Compile the main and the JDK 1.5 source tree.
+		Compile the main, JDK 1.5, and AspectJ sources.
 	-->
-	<target name="build" depends="buildmain,buildtiger,buildaspects" if="tiger.available"
+	<target name="build" depends="buildmain,buildtiger,buildaspects"
 					description="Compile main, JDK 1.5, and AspectJ sources"/>
 
 
@@ -623,73 +616,9 @@
 
 
 	<!--
-		Generate javadoc on JDK 1.4, excluding the JDK 1.5 source tree.
+		Generate javadoc for the main and JDK 1.5 sources.
 	-->
-	<target name="javadoc14" description="Generate framework Javadocs on JDK 1.4" if="tiger.unavailable">
-
-		<delete dir="${javadoc.dir}"/>
-		<mkdir dir="${javadoc.dir}"/>
-
-		<javadoc sourcepath="${src.dir}" destdir="${javadoc.dir}" windowtitle="Spring Framework"
-						 source="1.3" access="package" author="true" version="true" use="true" defaultexcludes="true">
-			<arg value="-breakiterator"/>
-			<arg value="-J-Xmx128m"/>
-			<arg value="-J-XX:MaxPermSize=128m"/>
-			<arg value="${javadoc.proxyhost}"/>
-			<arg value="${javadoc.proxyport}"/>
-			<doctitle><![CDATA[<h1>Spring Framework</h1>]]></doctitle>
-			<bottom><![CDATA[<i>Copyright (c) 2002-2006 The Spring Framework Project.</i>]]></bottom>
-			<classpath refid="all-libs"/>
-			<packageset dir="${src.dir}">
-				<include name="org/springframework/**"/>
-			</packageset>
-			<packageset dir="${mock.dir}">
-				<include name="org/springframework/**"/>
-			</packageset>
-			<!-- Unfortunately, jDocs have switched off their package listing, so we can't link to jDocs :( -->
-			<link href="http://java.sun.com/j2ee/1.4/docs/api"/>
-			<link href="http://java.sun.com/j2se/1.4.2/docs/api"/>
-			<link href="http://aopalliance.sourceforge.net/doc"/>
-			<!-- Burlap -->
-			<!-- Hessian -->
-			<link href="http://cglib.sourceforge.net/apidocs"/>
-			<!-- COS -->
-			<!-- EasyMock -->
-			<!-- EHCache -->
-			<link href="http://freemarker.sourceforge.net/docs/api/"/>
-			<link href="http://www.hibernate.org/hib_docs/api/"/>
-			<link href="http://www.ibatis.com/common/javadocs/"/>
-			<!-- iText -->
-			<!-- Commons Attributes (api + compiler -->
-			<link href="http://jakarta.apache.org/commons/collections/apidocs-COLLECTIONS_3_0/"/>
-			<link href="http://jakarta.apache.org/commons/dbcp/apidocs/"/>
-			<link href="http://jakarta.apache.org/commons/fileupload/apidocs/"/>
-			<link href="http://jakarta.apache.org/commons/httpclient/apidocs/"/>
-			<link href="http://jakarta.apache.org/commons/logging/api/"/>
-			<link href="http://jakarta.apache.org/commons/pool/apidocs/"/>
-			<!-- JasperReports -->
-			<!-- JDO -->
-			<!-- JMX -->
-			<!-- JOTM -->
-			<!-- JSF -->
-			<link href="http://www.junit.org/junit/javadoc/"/>
-			<link href="http://logging.apache.org/log4j/docs/api/"/>
-			<!-- OJB -->
-			<link href="http://jakarta.apache.org/regexp/apidocs/"/>
-			<link href="http://jakarta.apache.org/poi/apidocs/"/>
-			<link href="http://portals.apache.org/pluto/multiproject/portlet-api/apidocs/"/>
-			<link href="http://quartz.sourceforge.net/javadoc/"/>
-			<link href="http://struts.apache.org/api/"/>
-			<link href="http://jakarta.apache.org/velocity/api/"/>
-		</javadoc>
-
-	</target>
-
-
-	<!--
-		Generate javadoc on JDK 1.5, including the JDK 1.5 source tree.
-	-->
-	<target name="javadoc15" description="Generate framework Javadocs on JDK 1.5" if="tiger.available">
+	<target name="javadoc" description="Generate framework Javadocs">
 
 		<delete dir="${javadoc.dir}"/>
 		<mkdir dir="${javadoc.dir}"/>
@@ -754,12 +683,6 @@
 
 
 	<!--
-		Generate javadoc on either JDK 1.4 or JDK 1.5.
-	-->
-	<target name="javadoc" depends="javadoc14,javadoc15" description="Generate framework Javadocs"/>
-
-
-	<!--
 		Use Jakarta Commons Attributes to compile the attributes for the test source tree.
 	-->
 	<target name="compiletestattr" description="Apply Commmons Attributes compiler to main source tree">
@@ -776,7 +699,9 @@
 
 	</target>
 
+
 	<target name="compileallattrs" depends="compileattr,compiletestattr"/>
+
 
 	<!--
 		Compile the main test tree.
@@ -798,7 +723,7 @@
 			<classpath location="${target.mockclasses.dir}"/>
 		</javac>
 
-		<!-- Pick up logging config from test directory -->
+		<!-- Pick up config files from test directory -->
 		<copy todir="${target.testclasses.dir}" preservelastmodified="true">
 			<fileset dir="${test.dir}">
 				<include name="**/*.properties"/>
@@ -810,22 +735,22 @@
 	</target>
 
 
-	<!--
-		Compile the JDK 1.5 test tree.
-	-->
-	<target name="buildtigertests" depends="buildmaintests" if="tiger.available"
-					description="Compile test source tree java files into class files">
+	<target name="buildtigertests" depends="buildmaintests"
+					description="Compile JDK 1.5 test java files into class files">
 
-		<javac destdir="${target.testclasses.dir}" source="1.5" target="1.5" debug="${debug}"
+		<mkdir dir="${target.tigertestclasses.dir}"/>
+
+		<javac destdir="${target.tigertestclasses.dir}" source="1.5" target="1.5" debug="${debug}"
 					 deprecation="false" optimize="false" failonerror="true">
 			<src path="${tiger.test.dir}"/>
 			<classpath refid="all-libs"/>
 			<classpath location="${target.classes.dir}"/>
 			<classpath location="${target.mockclasses.dir}"/>
+			<classpath location="${target.testclasses.dir}"/>
 		</javac>
 
-		<!-- Pick up logging config from test directory -->
-		<copy todir="${target.testclasses.dir}" preservelastmodified="true">
+		<!-- Pick up config files from test directory -->
+		<copy todir="${target.tigertestclasses.dir}" preservelastmodified="true">
 			<fileset dir="${tiger.test.dir}">
 				<include name="**/*.properties"/>
 				<include name="**/*.xml"/>
@@ -835,11 +760,10 @@
 	</target>
 
 	
-	<!--
-		Compile the AspectJ test tree.
-	-->
 	<target name="buildaspecttests" depends="buildmaintests" if="aspectj.available"
 					description="Compile AspectJ test source tree java and aj files into class files">
+
+		<mkdir dir="${target.tigertestclasses.dir}"/>
 
 	  <taskdef resource="org/aspectj/tools/ant/taskdefs/aspectjTaskdefs.properties">
 	    <classpath>
@@ -857,17 +781,18 @@
 	       Then we can switch to just putting spring-aspects.jar
 	       on the aspectpath and avoid the recompilation -->
 	  <iajc sourceroots="${aspectj.test.dir}:${aspectj.src.dir}"
-					source="1.5" target="1.5" destDir="${target.testclasses.dir}">
+					source="1.5" target="1.5" destDir="${target.tigertestclasses.dir}">
 	  	<classpath>
 	  		<path refid="all-libs"/>
   			<path location="${target.classes.dir}"/>
 	  		<path location="${target.mockclasses.dir}"/>
 				<path location="${target.testclasses.dir}"/>
+				<path location="${target.tigertestclasses.dir}"/>
 	  	</classpath>
 	  </iajc>
 
-		<!-- Pick up logging config from test directory -->
-		<copy todir="${target.testclasses.dir}" preservelastmodified="true">
+		<!-- Pick up config files from test directory -->
+		<copy todir="${target.tigertestclasses.dir}" preservelastmodified="true">
 			<fileset dir="${aspectj.test.dir}">
 				<include name="**/*.properties"/>
 				<include name="**/*.xml"/>
@@ -877,25 +802,13 @@
 	</target>
 
 
-	<!--
-		Compile the main and the JDK 1.5 test source tree.
-	-->
 	<target name="buildtests" depends="buildmaintests,buildtigertests,buildaspecttests"
-					description="Compile main and JDK 1.5 test source tree"/>
+					description="Compile main, JDK 1.5, and AspectJ test sources"/>
 
 
-	<!--
-		Run test suite. This and clover.tests take their includes and excludes from
-		build.properties. However it's possible to run specific tests by passing in
-		the test.includes and (optionally) test.excludes properties through the
-		command line, as below:
-			ant tests -Dtest.includes=org/springframework/jdbc/**/*Test*
-	-->
-	<target name="tests" depends="buildtests" description="Run tests">
+	<target name="maintests" depends="buildtests" description="Run main tests">
 
-		<property name="reports.dir" value="${target.junit.reports.dir}"/>
-
-		<mkdir dir="${reports.dir}"/>
+		<mkdir dir="${target.junit.reports.dir}"/>
 
 		<junit forkmode="perBatch" printsummary="yes" haltonfailure="yes" haltonerror="yes">
 
@@ -914,7 +827,7 @@
 			<formatter type="plain" usefile="false"/>
 			<formatter type="xml"/>
 
-			<batchtest fork="yes" todir="${reports.dir}">
+			<batchtest fork="yes" todir="${target.junit.reports.dir}">
 				<fileset dir="${target.testclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
 			</batchtest>
 
@@ -923,17 +836,55 @@
 	</target>
 
 
+	<target name="tigertests" depends="buildtests" if="tiger.available" description="Run JDK 1.5 tests">
+
+		<mkdir dir="${target.junit.reports.dir}"/>
+
+		<junit forkmode="perBatch" printsummary="yes" haltonfailure="yes" haltonerror="yes">
+
+			<jvmarg line="-Djava.awt.headless=true -Xmx128m -XX:MaxPermSize=128m"/>
+
+			<!-- Must go first to ensure any jndi.properties files etc take precedence  -->
+			<classpath location="${target.tigertestclasses.dir}"/>
+			<classpath location="${target.testclasses.dir}"/>
+			<classpath location="${target.mockclasses.dir}"/>
+			<classpath location="${target.classes.dir}"/>
+
+			<!-- Need files loaded as resources -->
+			<classpath location="${test.dir}"/>
+
+			<classpath refid="all-libs"/>
+
+			<formatter type="plain" usefile="false"/>
+			<formatter type="xml"/>
+
+			<batchtest fork="yes" todir="${target.junit.reports.dir}">
+				<fileset dir="${target.tigertestclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
+			</batchtest>
+
+		</junit>
+
+	</target>
+
+
 	<!--
-		Run test suite and generate test summary.
+		Run test suite. This and clover.tests take their includes and excludes from
+		"build.properties". However it's possible to run specific tests by passing in
+		the "test.includes" and (optionally) "test.excludes" properties through the
+		command line, as below:
+			ant tests -Dtest.includes=org/springframework/jdbc/**/*Test*
+	-->
+	<target name="tests" depends="maintests,tigertests" description="Run tests"/>
+
+
+	<!--
+		Run test suite and generate test summary, for both main and tiger tests.
 		Does not halt on failure or error, in contrast to the "tests" target above.
 	-->
 	<target name="testsummary" depends="buildtests" description="Run tests and generate test summary">
 
-		<property name="reports.dir" value="${target.junit.reports.dir}"/>
-		<property name="summary.dir" value="${target.junit.summary.dir}"/>
-
-		<mkdir dir="${reports.dir}"/>
-		<mkdir dir="${summary.dir}"/>
+		<mkdir dir="${target.junit.reports.dir}"/>
+		<mkdir dir="${target.junit.summary.dir}"/>
 
 		<junit printsummary="yes" haltonfailure="no" haltonerror="no">
 
@@ -952,25 +903,24 @@
 			<formatter type="plain" usefile="false"/>
 			<formatter type="xml"/>
 
-			<batchtest fork="yes" todir="${reports.dir}">
+			<batchtest fork="yes" todir="${target.junit.reports.dir}">
 				<fileset dir="${target.testclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
+				<fileset dir="${target.tigertestclasses.dir}" includes="${test.includes}" excludes="${test.excludes}"/>
 			</batchtest>
 
 		</junit>
 
-		<junitreport todir="${reports.dir}">
-
-			<fileset dir="${reports.dir}">
+		<junitreport todir="${target.junit.reports.dir}">
+			<fileset dir="${target.junit.reports.dir}">
 				<include name="TEST-*.xml"/>
 			</fileset>
-			<report todir="${summary.dir}"/>
-
+			<report todir="${target.junit.summary.dir}"/>
 		</junitreport>
 
 	</target>
 
 
-	<target name="clean_tests" depends="clean, tests"/>
+	<target name="clean_tests" depends="clean,tests"/>
 
 
 	<target name="clover.build" description="Compile main source tree java files WITH CLOVER into class files">
@@ -999,7 +949,8 @@
 
 	</target>
 
-	<target name="clover.buildtiger" description="Compile main source tree java files WITH CLOVER into class files" if="tiger.available">
+
+	<target name="clover.buildtiger" description="Compile main source tree java files WITH CLOVER into class files">
 
 		<!-- switch on Clover by specifying it as the compiler to use -->
 		<property name="build.compiler" value="org.apache.tools.ant.taskdefs.CloverCompilerAdapter"/>
