@@ -59,6 +59,9 @@ target.mockclasses.dir=${target.dir}/mock-classes
 # Test tree will be compiled into this directory tree
 target.testclasses.dir=${target.dir}/test-classes
 
+# Tiger test tree will be compiled into this directory tree
+target.tigertestclasses.dir=${target.dir}/tiger-test-classes
+
 # Sandbox directory under the current root
 sandbox.dir=${basedir}/sandbox
 sandbox.src.dir=${basedir}/sandbox/src
