@@ -6,6 +6,9 @@ http://www.springframework.org
 Changes in version 2.0 M2 (25.1.2006)
 -------------------------------------
 
+Overall
+* all of Spring must be built on JDK 1.5 now; the test suite is still able to run on JDK 1.4 and 1.3
+
 Package org.springframework.aop
 * removed restriction on proxying protected methods from Cglib2AopProxy
 * allowed AopUtils's "invokeJoinpointUsingReflection" to invoke protected methods
@@ -48,9 +51,11 @@ Package org.springframework.core
 * refined Jdk13ControlFlow to be compatible with GNU ClassPath (whose stacktrace has a whitespace after the method name)
 * added NestedIOException, deriving from java.io.IOException and adding NestedCheckedException-style root cause handling
 * refined AbstractResource to work around "FilterInputStream.close()" NPE, simply catching Throwable and ignoring it
+* PathMatchingResourcePatternResolver considers URL protocol "wsjar" as jar file (to load from WebSphere-managed jars)
 
 Package org.springframework.jdbc
 * DataSourceTransactionManager only attempts to release Connection if not pre-bound (to avoid inappropriate log message)
+* TransactionAwareDataSourceProxy works correctly in combination with JdbcTemplate and transaction suspend/resume now
 * fixed SingleColumnRowMapper to explicitly check "ResultSet.wasNull()" after "getInt"/"getLong"/"getFloat" etc
 * turned visibility of "org.springframework.jdbc.core.StatementCreatorUtils" to package-protected
 * removed ResultReader interface (sub-interface of RowCallbackHandler): use RowMapper instead
@@ -98,6 +103,7 @@ Package org.springframework.test
 * added "startNewTransaction()" method to AbstractTransactionalSpringContextTests
 
 Package org.springframework.transaction
+* refined AbstractPlatformTransactionManager to suspend synchronizations before the actual transaction (not after)
 * fixed AbstractPlatformTransactionManager to serialize all relevant state
 * fixed TransactionInterceptor to correctly serialize TransactionAspectSupport state
 * marked AnnotationTransactionAttributeSource as Serializable
